--- a/web.config
+++ b/web.config
@@ -29,7 +29,7 @@
                          <conditions>
                               <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
                          </conditions>
-                         <action type="Rewrite" url="server.js"/>
+                         <action type="Rewrite" url="./bin/www"/>
                     </rule>
 
                </rules>
