--- a/package.json
+++ b/package.json
@@ -8,13 +8,24 @@
   "dependencies": {
     "body-parser": "~1.12.0",
     "bower": "^1.4.1",
+    "chai": "^3.0.0",
+    "cheerio": "^0.19.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "ejs": "^2.3.1",
     "express": "~4.12.2",
     "express-session": "^1.11.2",
+    "gulp": "^3.9.0",
+    "gulp-karma": "0.0.4",
+    "gulp-mocha": "^2.1.1",
+    "gulp-util": "^3.0.5",
+    "install": "^0.1.8",
     "jade": "~1.9.2",
+    "mocha": "^2.2.5",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "nightwatch": "^0.6.13",
+    "request": "^2.57.0",
+    "serve-favicon": "~2.2.0",
+    "string": "^3.2.0"
   }
 }
